--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,19 +11,19 @@
 
         <activity
             android:name=".view.auth.LoginActivity"
-            android:exported="true"
+            android:exported="false"
             android:label="@string/title_activity_login"></activity>
 
         <activity
             android:name=".view.auth.RegisterActivity"
-            android:exported="true"
-            android:label="@string/title_activity_login"></activity>
+            android:exported="false"
+            android:label="@string/title_activity_register"></activity>
+
         <activity
             android:name=".view.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
