--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,17 +6,16 @@
         android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppOrderTour"
-        android:usesCleartextTraffic="true">
+        android:theme="@style/Theme.AppOrderTour">
 
         <activity
             android:name=".view.auth.LoginActivity"
-            android:exported="false"
+            android:exported="true"
             android:label="@string/title_activity_login"></activity>
 
         <activity
             android:name=".view.auth.RegisterActivity"
-            android:exported="false"
+            android:exported="true"
             android:label="@string/title_activity_register"></activity>
 
         <activity
