--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,22 +7,26 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppOrderTour">
-
+        <activity
+            android:name=".view.navigation.chat.ChatActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.detail_tour.DetailTourActivity"
+            android:exported="false" />
         <activity
             android:name=".view.auth.LoginActivity"
             android:exported="true"
-            android:label="@string/title_activity_login"></activity>
-
+            android:label="@string/title_activity_login" />
         <activity
             android:name=".view.auth.RegisterActivity"
             android:exported="true"
-            android:label="@string/title_activity_register"></activity>
-
+            android:label="@string/title_activity_register" />
         <activity
             android:name=".view.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
