--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppOrderTour">
         <activity
+            android:name=".view.navigation.home_fragment.GetAllTourActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.detail_tour.CommentActivity"
             android:exported="false" />
         <activity
