--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,5 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'net.danlew:android.joda:2.10.14'
+    implementation 'com.sa90.materialarcmenu:library:2.0.0'
 }
